Update DL_07 - Natural language processing.ipynb
Update module name for pad_sequences

--- a/Exercise/DL_07 - Natural language processing.ipynb
+++ b/Exercise/DL_07 - Natural language processing.ipynb
@@ -74,7 +74,7 @@
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.preprocessing import text_dataset_from_directory\n",
         "from keras.preprocessing.text import Tokenizer\n",
-        "from keras.preprocessing.sequence import pad_sequences\n",
+        "from keras_preprocessing.sequence import pad_sequences\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "from sklearn.model_selection import train_test_split\n",
